--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "micro-events",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "description": "A very, very simple event emitter implementation.",
   "main": "index.js",
   "scripts": {
@@ -10,5 +10,14 @@
   "license": "ISC",
   "devDependencies": {
     "mocha": "^2.0.1"
-  }
+  },
+  "dependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/alexanderGugel/micro-events.git"
+  },
+  "bugs": {
+    "url": "https://github.com/alexanderGugel/micro-events/issues"
+  },
+  "homepage": "https://github.com/alexanderGugel/micro-events"
 }
